Use tie line util get paired dangling line (#114)
* use TieLineUtil getPairedDanglingLine

---------
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>